[project]
name = "home-assistant-lifetime-fitness"
version = "0.0.0"
description = "Home Assistant integration for Life Time Fitness"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "jsheputis"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "homeassistant",
    "fake-useragent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-homeassistant-custom-component>=0.13.205",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "LOG",    # flake8-logging
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in HA callbacks)
    "ARG002", # unused method argument (common in HA callbacks)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",    # Unused arguments are common in test fixtures
    "S101",   # assert is fine in tests
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.lifetime_fitness"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
show_error_codes = true
show_error_context = true

# Ignore missing imports for external packages
[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "voluptuous.*",
    "aiohttp.*",
    "fake_useragent.*",
    "pytest_homeassistant_custom_component.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git"]
addopts = [
    "--strict-markers",
    "--cov=custom_components/lifetime_fitness",
    "--cov-report=term-missing",
    "--cov-report=html",
]
filterwarnings = [
    "ignore:.*plugin.py:pytest.PytestDeprecationWarning",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["custom_components/lifetime_fitness"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70
